--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,22 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="POST">
+  <label for="name"> Pirate Name</label>
+    <input type="text" id="pirate[name]" name="pirate[name]">
+  <label for="weight"> Pirate Weight</label>
+    <input type="text" id="pirate[weight]" name="pirate[weight]">
+  <label for="height"> Pirate Height</label>
+    <input type="text" id="pirate[height]" name="pirate[height]">
+  <label for="name"> Ship 1 Name</label>
+    <input type="text" id="ship_name_1" name="pirate[ships][][name]">
+  <label for="type"> Ship Type</label>
+    <input type="text" id="ship_type_1" name="pirate[ships][][type]">
+  <label for="booty"> Ship booty</label>
+    <input type="text" id="ship_booty_1" name="pirate[ships][][booty]">
+  <label for="name"> Ship 2 Name</label>
+    <input type="text" id="ship_name_2" name="pirate[ships][][name]">
+  <label for="type"> Ship Type</label>
+    <input type="text" id="ship_type_2" name="pirate[ships][][type]">
+  <label for="booty"> Ship booty</label>
+    <input type="text" id="ship_booty_2" name="pirate[ships][][booty]">
+  <input type="submit" id="Submit" value="submit">
+</form>
