--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,12 @@
 <h1>Display your Pirate here</h1>
-
-
+<p>Pirate name: <%= @pirate.name %></p>
+<p>Pirate weight: <%= @pirate.weight %></p>
+<p>Pirate height: <%= @pirate.height %></p>
 <h2>Display your first ship here</h2>
-
-
+<p>Ship 1 Name: <%= @ship_1.name%></p>
+<p>Ship 1 Type:<%= @ship_1.type%></p>
+<p>Ship 1 Booty:<%= @ship_1.booty%></p>
 <h2>Display your second ship here</h2>
+<p>Ship 2 Name: <%= @ship_2.name%></p>
+<p>Ship 2 Type:<%= @ship_2.type%></p>
+<p>Ship 2 Booty:<%= @ship_2.booty%></p>
